--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 #footer {
 	position: absolute;
-	z-index: 999;
+	z-index: 998;
 	color:#FFF;
 	bottom: 10px;
 	left:10px;
@@ -21,4 +21,23 @@ body {
 	padding-right: 80px;
 	font-size:16px;
 	font-family: "Apple Chancery", Arial;
+}
+
+#reset 
+{
+	display: none;
+	position: absolute;
+	z-index: 999;
+	background-color: #FFF;
+	opacity: 0.7;
+	width: 100%;
+	height: 100%;
+	left:0;
+	top:0;
+	text-align: center;
+}
+
+#reset h3 {
+	position: relative;
+	top:100px;
 }
