--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html, body {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -18,11 +24,38 @@ body {
 
 h2 {
 	position: absolute;
-	top : 400px;
+	top : 350px;
 	left: 30px;
 	color: #FFF;
 }
 
-h2 #score {
+h2.life {
+	left: 200px;
+}
 
+#menu {
+	display: none;
+	position: absolute;
+	z-index: 999;
+
+	background-color: #666;
+
+	width: 100%;
+	height: 100%;
+}
+
+#exit, #restart {
+	position: absolute;
+
+	top : 400px;
+	left: 160px;
+
+	width: 100px;
+}
+
+#restart {
+	position: absolute;
+
+	top : 400px;
+	left: 30px;
 }
